# numerical-method-solver

./: .gitignore  CMakeLists.txt  README.md  README_APPLY.txt  README_RESPONSIVE_PATCH.txt
docs/: index.html  script.js  style.css
include/: AppConfig.h  BisectionSolver.h  CRTOverlay.h  EulerOdeSolver.h  ExportManager.h  FunctionParser.h  GraphWidget.h  IterationRecord.h  MainWindow.h  NewtonSolver.h  OdeFunctionParser.h  OdeIterationRecord.h  RK4OdeSolver.h  SecantSolver.h  ThemeManager.h
src/: AppConfig.cpp  BisectionSolver.cpp  CRTOverlay.cpp  EulerOdeSolver.cpp  ExportManager.cpp  FunctionParser.cpp  GraphWidget.cpp  MainWindow.cpp  NewtonSolver.cpp  OdeFunctionParser.cpp  RK4OdeSolver.cpp  SecantSolver.cpp  ThemeManager.cpp  main.cpp
